--- a/Frontend/public/dettaglio_account_privato.html
+++ b/Frontend/public/dettaglio_account_privato.html
@@ -76,7 +76,7 @@
                             <div class="detail-field-box border-glow">
                                 <input id="detail-nomeAccount" name="account_name" readonly
                                     class="detail-field-input no-transform" autocomplete="off">
-                                <button class="btn-icon-header copy-btn" type="button">
+                                <button class="btn-icon-header copy-btn" type="button" data-field="detail-nomeAccount">
                                     <span class="material-symbols-outlined">content_copy</span>
                                 </button>
                             </div>
@@ -88,7 +88,7 @@
                             <div class="detail-field-box border-glow">
                                 <input id="detail-username" name="account_username" type="text" readonly
                                     class="detail-field-input no-transform" autocomplete="off">
-                                <button class="btn-icon-header copy-btn" type="button">
+                                <button class="btn-icon-header copy-btn" type="button" data-field="detail-username">
                                     <span class="material-symbols-outlined">content_copy</span>
                                 </button>
                             </div>
@@ -101,7 +101,7 @@
                             <div class="detail-field-box border-glow">
                                 <input id="detail-account" name="account_code" type="text" readonly
                                     class="detail-field-input no-transform" autocomplete="off">
-                                <button class="btn-icon-header copy-btn" type="button">
+                                <button class="btn-icon-header copy-btn" type="button" data-field="detail-account">
                                     <span class="material-symbols-outlined">content_copy</span>
                                 </button>
                             </div>
@@ -118,7 +118,7 @@
                                     <button id="toggle-password" class="btn-icon-header" type="button">
                                         <span class="material-symbols-outlined">visibility</span>
                                     </button>
-                                    <button class="btn-icon-header copy-btn" type="button">
+                                    <button class="btn-icon-header copy-btn" type="button" data-field="detail-password">
                                         <span class="material-symbols-outlined">content_copy</span>
                                     </button>
                                 </div>
@@ -135,7 +135,7 @@
                                     <button id="open-website" class="btn-icon-header" type="button">
                                         <span class="material-symbols-outlined">open_in_new</span>
                                     </button>
-                                    <button class="btn-icon-header copy-btn" type="button">
+                                    <button class="btn-icon-header copy-btn" type="button" data-field="detail-website">
                                         <span class="material-symbols-outlined">content_copy</span>
                                     </button>
                                 </div>
@@ -145,7 +145,7 @@
                         <div id="add-banking-prompt" class="banking-prompt-box hidden">
                             <button type="button" id="btn-banking-info" class="btn-banking-info">
                                 <span class="material-symbols-outlined info-icon">info</span>
-                                <span class="info-text" data-t="visual_identity">Aggiungi conto bancario</span>
+                                <span class="info-text" data-t="banking_hint">Aggiungi conto bancario</span>
                             </button>
                         </div>
                     </div>
