--- a/Frontend/public/form_account_privato.html
+++ b/Frontend/public/form_account_privato.html
@@ -3,10 +3,11 @@
 
 <head>
     <meta http-equiv="Content-Security-Policy"
-        content="default-src 'self' https://*.firebaseapp.com https://*.googleapis.com; script-src 'self' https://*.firebaseapp.com https://apis.google.com https://www.googletagmanager.com https://www.gstatic.com; style-src 'self'; font-src 'self'; img-src 'self' data: https://*; connect-src 'self' https://*.googleapis.com https://*.firebaseio.com https://www.gstatic.com wss://*.firebaseio.com; frame-src 'self' https://*.firebaseapp.com https://www.gstatic.com;">
+        content="default-src 'self' https://*.firebaseapp.com https://*.googleapis.com; script-src 'self' https://*.firebaseapp.com https://apis.google.com https://www.googletagmanager.com https://www.gstatic.com; style-src 'self' https://fonts.googleapis.com; font-src 'self' https://fonts.gstatic.com; img-src 'self' data: https://*; connect-src 'self' https://*.googleapis.com https://*.firebaseio.com https://www.gstatic.com wss://*.firebaseio.com; frame-src 'self' https://*.firebaseapp.com https://www.gstatic.com;">
     <meta charset="utf-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
-    <title>Account Privato - PROTOCOLLO BASE</title>
+    <meta name="viewport"
+        content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no, viewport-fit=cover">
+    <title>Dettaglio Account Privato - PROTOCOLLO BASE V5.3</title>
 
     <!-- PWA / Mobile Capable -->
     <link rel="manifest" href="manifest.json?v=3.6" />
@@ -27,7 +28,10 @@
 
 <body class="base-bg">
     <div class="base-container relative">
+        <!-- Ambient Glow -->
         <div class="base-glow"></div>
+        <!-- 2. FARO ANIMATO -->
+        <div class="base-glow pointer-events-none"></div>
 
         <header id="header-placeholder" class="base-header"></header>
         <div class="spacer-header"></div>
@@ -57,6 +61,10 @@
                                 </div>
                             </div>
                         </div>
+                        <p id="detail-note" class="note-text no-transform flex-1 mr-2">-</p>
+                        <button id="copy-note" class="btn-icon-header" type="button" data-field="detail-note">
+                            <span class="material-symbols-outlined text-sm">content_copy</span>
+                        </button>
                         <!-- Tasto Rimozione Logo -->
                         <button id="btn-remove-logo" type="button" class="btn-remove-logo">
                             <span class="material-symbols-outlined text-sm">close</span>
@@ -106,7 +114,8 @@
                             <div class="glass-field-container">
                                 <label class="view-label" for="account-password" data-t="password">Password</label>
                                 <div class="glass-field border-glow">
-                                    <button id="btn-toggle-password-edit" type="button" class="ml-4 opacity-40">
+                                    <button id="btn-toggle-password-edit" type="button"
+                                        class="ml-4 opacity-40 border-none bg-transparent">
                                         <span class="material-symbols-outlined text-[18px]">visibility</span>
                                     </button>
                                     <input id="account-password" name="account_password" type="password"
@@ -217,7 +226,7 @@
                                 class="visibility-option-card border-glow border border-slate-300 dark:border-white/20 bg-slate-50 dark:bg-transparent">
                                 <div class="flex-center-gap">
                                     <span
-                                        class="material-symbols-outlined icon-accent-blue p-2 rounded-lg bg-blue-400/10">share</span>
+                                        class="material-symbols-outlined icon-accent-blue p-2 rounded-lg bg-blue-400/10 text-sm">share</span>
                                     <span class="text-xs font-black uppercase" data-t="shared_account">Account
                                         Condiviso</span>
                                 </div>
@@ -261,7 +270,7 @@
                             class="visibility-option-card border-glow border border-slate-300 dark:border-white/20 bg-slate-50 dark:bg-transparent">
                             <div class="flex-center-gap">
                                 <span
-                                    class="material-symbols-outlined icon-accent-green p-2 rounded-lg bg-green-400/10">broadcast_on_personal</span>
+                                    class="material-symbols-outlined icon-accent-green p-2 rounded-lg bg-green-400/10 text-sm">broadcast_on_personal</span>
                                 <span class="text-xs font-black uppercase" data-t="memo_shared">Memorandum
                                     Condiviso</span>
                             </div>
