--- a/Frontend/public/form_account_azienda.html
+++ b/Frontend/public/form_account_azienda.html
@@ -198,21 +198,18 @@
                     </div>
                 </section>
 
-                <!-- 4. Note & Condivisione -->
+                <!-- 4. Note -->
                 <section class="mt-8 mb-10">
                     <div class="detail-section-header">
                         <span
                             class="material-symbols-outlined detail-section-icon icon-accent-amber">sticky_note_2</span>
-                        <h3 class="detail-section-title" data-t="notes_and_sharing">Note e Condivisione</h3>
+                        <h3 class="detail-section-title" data-t="notes">Note</h3>
                     </div>
 
                     <div class="flex flex-col gap-4">
                         <div class="glass-field-container">
-                            <label class="view-label" for="account-note" data-t="notes">Note</label>
-                            <div class="note-display-box border-glow">
-                                <textarea id="account-note" data-t-placeholder="notes_placeholder"
-                                    class="form-textarea form-textarea-notes w-full p-3 bg-transparent border-none text-white text-sm outline-none"></textarea>
-                            </div>
+                            <textarea id="account-note" data-t-placeholder="notes_placeholder"
+                                class="glass-field w-full min-h-[120px] p-4 text-sm text-slate-800 dark:text-slate-200 bg-slate-100 dark:bg-white/5 outline-none border-none resize-none rounded-2xl"></textarea>
                         </div>
 
                         <div class="flex flex-col gap-3">
